/*
 * $Id: ChangeLog,v 1.308 2007-01-01 20:52:13 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-01-01 14:46 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  + source/common_make.bat
  * source/makelib.bat
  + source/makelib_bcc.bat
  + source/makelib_mingw.bat
  + source/makelib_pc.bat
    + Added MAKELIB file for Pelles C and MinGW (experimental!).
    * Unified PRG sources compilation.
  * ./compile.bat
  + ./compile_bcc.bat
  + ./compile_pc.bat
    + Added COMPILE file for Pelles C.
  * source/h_grid.prg
    * Added missing declaration for Pelles C.
  * source/c_combo.c
  * source/c_crypt.c
  * source/c_cursor.c
  * source/c_datepicker.c
  * source/c_frame.c
  * source/c_grid.c
  * source/c_ini.c
  * source/c_ipaddress.c
  * source/c_listbox.c
  * source/c_media.c
  * source/c_monthcal.c
  * source/c_msgbox.c
  * source/c_progressbar.c
  * source/c_scrsaver.c
  * source/c_spinner.c
  * source/c_textbox.c
  * source/winprint.c
  * source/miniprint.c
    * Added missing EOL at EOF.
    * Added missing casts.
    * Minor formatting.

  + ./ChangeLog.001
  * ./ChangeLog
    ! Renamed to ChangeLog.001 and start a new one.