@@ -1,7 +1,7 @@
 @echo off
 rem
-rem $Id: compile.bat,v 1.15 2007-01-01 20:52:13 guerra000 Exp $
+rem $Id: compile.bat,v 1.16 2007-01-01 22:30:14 guerra000 Exp $
 rem
 cls
 
-call compile_pc %1 %2 %3 %4 %5 %6 %7 %8 %9
+call compile_bcc %1 %2 %3 %4 %5 %6 %7 %8 %9
