@@ -1,6 +1,6 @@
 @echo off
 rem
-rem $Id: makelib.bat,v 1.34 2007-01-01 20:52:13 guerra000 Exp $
+rem $Id: makelib.bat,v 1.35 2007-01-01 22:30:14 guerra000 Exp $
 rem
 
-call makelib_pc
+call makelib_bcc
