@@ -1,6 +1,6 @@
 @echo off
 rem
-rem $Id: makelib_mingw.bat,v 1.1 2007-01-01 20:52:13 guerra000 Exp $
+rem $Id: makelib_mingw.bat,v 1.2 2007-01-01 22:30:14 guerra000 Exp $
 rem
 cls
 
@@ -21,6 +21,9 @@ if errorlevel 1 goto EXIT1
 
 SET OOHG_X_FLAGS=-Wall -mno-cygwin -O3 -c -I%hg_hrb%\include -I%hg_mgw%\include -L%hg_hrb%\lib -L%hg_mgw%\lib
 
+SET _PATH2=%PATH%
+SET PATH=%PATH%;%hg_mgw%\bin
+
 %hg_mgw%\bin\gcc %OOHG_X_FLAGS% h_scrsaver.c h_edit.c h_edit_ex.c h_error.c h_ipaddress.c c_ipaddress.c h_monthcal.c c_monthcal.c h_help.c c_help.c h_crypt.c c_crypt.c h_status.c h_tree.c c_tree.c c_toolbar.c h_toolbar.c h_init.c h_media.c c_media.c h_winapimisc.c h_slider.c c_combo.c c_controlmisc.c c_datepicker.c c_resource.c h_cursor.c c_cursor.c c_ini.c h_ini.c h_report.c h_registry.c h_font.c c_font.c h_hyperlink.c h_richeditbox.c h_scroll.c h_http.c h_zip.c h_progressmeter.c h_comm.c h_print.c
 if errorlevel 1 goto EXIT2
 %hg_mgw%\bin\gcc %OOHG_X_FLAGS% c_dialogs.c c_grid.c c_windows.c c_image.c c_listbox.c c_msgbox.c c_frame.c c_progressbar.c c_spinner.c c_textbox.c c_timer.c c_winapimisc.c h_button.c h_checkbox.c h_combo.c h_controlmisc.c h_datepicker.c h_editbox.c h_dialogs.c h_grid.c h_windows.c h_image.c h_label.c h_listbox.c h_menu.c h_msgbox.c h_frame.c h_progressbar.c h_radio.c h_spinner.c h_tab.c h_textbox.c h_timer.c c_scrsaver.c h_hotkey.c h_graph.c c_graph.c h_browse.c h_splitbox.c h_scrollbutton.c h_xbrowse.c h_internal.c h_textarray.c h_hotkeybox.c
@@ -40,6 +43,8 @@ if exist miniprint.o %hg_mgw%\bin\ar rc %hg_root%\lib\libminiprint.a miniprint.o
 if errorlevel 2 goto EXIT2
 
 :EXIT2
+SET PATH=%_PATH2%
+SET _PATH2=
 del *.o
 
 :EXIT1
